# RemoveBackgroundForVideo

./: .gitignore  CLAUDE.md  README.md  build_cpu.bat  build_gpu.bat  build_mac.sh  justfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/workspace/: launch-template.md  task.md
.claude/workspace/project_index/: dependencies.json  overview.json  src_modules.json  tests.json
.github/workflows/: build.yml  ci.yml  e2e-windows.yml
assets/: icon.icns
docs/: ARCHITECTURE.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  USAGE.md  操作マニュアル_動画背景除去ツール.docx
installer/: setup.iss  setup_cpu.iss  setup_gpu.iss
scripts/: capture_screenshots.py  check_relative_imports.py  compress_video.py  create_manual.py
src/: __init__.py  main.py  rvm_model.py  utils.py  video_compressor.py  video_processor.py
temp/e2e-report/: test_report.txt
tests/: __init__.py  debug_thumbnail_resize.py  e2e_windows_exe.py  test_build_scripts.py  test_e2e.py  test_gui.py  test_installer.py  test_main.py  test_relative_imports.py  test_rvm_model.py  test_single_instance.py  test_subprocess_hidden.py  test_thumbnail_resize_interactive.py  test_thumbnail_responsive.py  test_utils.py  test_video_compressor.py  test_video_processor.py
tests/fixtures/: TestVideo.mov  TestVideo.webm
