# RemoveBackgroundForVideo - Project Configuration

[project]
name = "RemoveBackgroundForVideo"
version = "1.0.0"
description = "動画から人物の背景を自動的に除去するデスクトップアプリケーション"
requires-python = ">=3.10"

[tool.ruff]
# 基本設定
target-version = "py310"
line-length = 100

# 対象ディレクトリ
src = ["src", "tests"]
include = ["*.py"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "models",
]

[tool.ruff.lint]
# 有効なルール
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

# 無視するルール
ignore = [
    "E501",   # 行の長さはformatter（ruff format）に任せる
    "SIM108", # if-else-block-instead-of-if-exp（可読性優先）
]

# テストファイルは特別扱い（モック設定後のimportが必要）
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

# 自動修正可能なルール
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# import順序の設定
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# フォーマット設定
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
